addons/cert-manager/networkpolicy-certmanager-tls-egress.yaml
# addons/cert-manager/networkpolicy-certmanager-tls-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-certmgr-tls-egress
  namespace: cert-manager
spec:
  podSelector: {} # all cert-manager pods
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: UDP
          port: 53
